Added missing translations.

--- a/Translations/en_US/messages.ini
+++ b/Translations/en_US/messages.ini
@@ -7,3 +7,5 @@ kntnt.emailmarketing.sender="Sender"
 kntnt.emailmarketing.sender.tooltip="Choose sender of the welcome letter."
 kntnt.emailmarketing.verify_url="Verify URL"
 kntnt.emailmarketing.verify_url.tooltip="URL to the page shown after verifying the subscription."
+kntnt.emailmarketing.field.email="Email"
+kntnt.emailmarketing.field.name="Name"
