Added the verify subject field. Minor code maintaince.

--- a/Translations/en_US/messages.ini
+++ b/Translations/en_US/messages.ini
@@ -1,11 +1,13 @@
 kntnt.emailmarketing.list="List"
 kntnt.emailmarketing.list.tooltip="Choose the list the lead should be added to."
 kntnt.emailmarketing.list.update="The Lead Field Mapping tab will appear after selecting a list and will update after changing the selected list."
+kntnt.emailmarketing.verify_subject="Verify subject"
+kntnt.emailmarketing.verify_subject.tooltip="The subject line of the verify subscription email."
+kntnt.emailmarketing.verify_url="Verify URL"
+kntnt.emailmarketing.verify_url.tooltip="URL to the page shown after verifying the subscription."
 kntnt.emailmarketing.welcome_letter="Welcome letter"
 kntnt.emailmarketing.welcome_letter.tooltip="Choose the welcome letter that should be sent to the the lead."
 kntnt.emailmarketing.sender="Sender"
 kntnt.emailmarketing.sender.tooltip="Choose sender of the welcome letter."
-kntnt.emailmarketing.verify_url="Verify URL"
-kntnt.emailmarketing.verify_url.tooltip="URL to the page shown after verifying the subscription."
 kntnt.emailmarketing.field.email="Email"
 kntnt.emailmarketing.field.name="Name"
